Create dashboar, create request friendship. Change doc.
